@@ -59,3 +59,4 @@
 @top_srcdir@/libdm/misc/dmlib.h
 @top_srcdir@/libdm/misc/kdev_t.h
 @top_srcdir@/po/pogen.h
+@top_srcdir@/tools/lvm2cmd.h
